k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dutyguild
  namespace: dutyguild
spec:
  selector:
    app: dutyguild
  ports:
    - name: http
      port: 80
      targetPort: http
