k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dutyguild
  namespace: dutyguild
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: dutyguild.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dutyguild
                port:
                  number: 80
